--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
 		</div>
 
 		<button class="new-game-btn">New Game</button>
-		<script src="./tictactoe.js"></script>
+		<script src="./app//tictactoe.js"></script>
 	</body>
 </html>
